# job_assistance

./: .dockerignore  .gitignore  .vercelignore  CHECK_DEPLOY_URL.md  DATABASE_MIGRATION.md  DATA_STORAGE_INFO.md  DEPLOY_EXECUTE.md  DEPLOY_READY.md  DEPLOY_VERCEL.md  DEPLOY_VERCEL_PUBLIC.md  DOCKER_RESTART.md  Dockerfile.backend  FEATURES.md  FINAL_DEPLOY.md  FIX_404.md  FIX_405_ERROR.md  GET_DEPLOY_URL.md  LICENSE  LOCAL_VS_VERCEL_DIFFERENCES.md  MFA_QUICK_TEST.md  MFA_TEST_GUIDE.md  Makefile  NODEJS_UPGRADE.md  NO_BACKEND_DEPLOY.md  QUICKSTART.md  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  RATE_LIMIT_RESET.md  REACT_VITE_SETUP.md  README.md  README_VERCEL.md  START_DEPLOY.md  UNITY_INTEGRATION_GUIDE.md  VERCEL_API_ROUTES_FIX.md  VERCEL_DEPLOY_COMPLETE.md  VERCEL_DEPLOY_FIX.md  VERCEL_DEPLOY_NOW.md  VERCEL_DEPLOY_SUCCESS.md  VERCEL_ENV_SETUP.md  build.gradle.kts  (+29 more)
api/: health.ts  training-menus.ts  training-sessions.ts  workers.ts
api/admin/: summary.ts
api/auth/: current.ts  (+3 more)
app/: page.tsx
components/: AdminSummary.tsx  ConstructionSimulatorManagement.tsx  IntegratedDashboard.tsx  JapaneseProficiencyManagement.tsx  Login.tsx  ReplayViewer.tsx  WorkerForm.tsx
lib/: api.ts  mockUsers.ts
src/: App.tsx  __init__.py  __main__.py  api.py  api_extended.py  application.py  database.py  index.css  init_db.py  interview.py  job_posting.py  main.py  main.tsx  matching.py  security.py  skills.py
tests/: README.md  TEST_SUMMARY.md  run-all-tests.ts  test-controller.ts  test-execution-order.md  test-index.ts  test-master.ts  test-runner.md  test-suite.ts  test-summary.ts
(+71 files in other folders)
